Implement Netlify Functions for Stripe payments
- Create serverless function for secure payment processing
- Update frontend to use /.netlify/functions/create-checkout-session
- Configure netlify.toml for functions support
- Add CORS headers for cross-origin requests
- Fixes 'Unexpected token' JSON error on donation
- All API keys properly secured via environment variables

--- a/index.html
+++ b/index.html
@@ -1887,8 +1887,8 @@
                 throw new Error('Stripe not loaded');
               }
 
-              // Create checkout session on backend
-              const response = await fetch('/api/payments/create-checkout-session', {
+              // Create checkout session using Netlify function
+              const response = await fetch('/.netlify/functions/create-checkout-session', {
                 method: 'POST',
                 headers: {
                   'Content-Type': 'application/json',
