--- a/index.html
+++ b/index.html
@@ -2199,7 +2199,7 @@
               }
 
               // Create checkout session using Netlify function
-              const response = await fetch('/.netlify/functions/create-checkout-session', {
+              const response = await fetch('/api/stripe-donation', {
                 method: 'POST',
                 headers: {
                   'Content-Type': 'application/json',
