--- a/index.html
+++ b/index.html
@@ -154,6 +154,10 @@
         .decor-size-2 { font-size: 1.5rem; }  /* Medium 2x2 */
         .decor-size-3 { font-size: 2.25rem; } /* Large 3x3 */
         
+        /* Custom width/height classes for grid cells */
+        .w-18 { width: 4.5rem; } /* 72px for 3x3 grid (3 * 24px) */
+        .h-18 { height: 4.5rem; } /* 72px for 3x3 grid (3 * 24px) */
+        
         /* Ensure modal backgrounds don't show white */
         .modal-content { background-color: inherit !important; }
         .bg-white { background-color: white; }
@@ -3091,14 +3095,28 @@
                                     }}
                                     onDragOver={handleDragOver}
                                     onDrop={(e) => handleDrop(e, rowIndex, colIndex)}
-                                    className={`w-6 h-6 border border-green-300 rounded cursor-pointer transition-colors ${
+                                    className={`relative border border-green-300 rounded cursor-pointer transition-colors ${
+                                      // Size the cell based on decoration size
+                                      cell && cell.isMainCell && cell.size > 1 
+                                        ? `${cell.size === 2 ? 'w-12 h-12' : cell.size === 3 ? 'w-18 h-18' : 'w-6 h-6'}` 
+                                        : 'w-6 h-6'
+                                    } ${
                                       cell 
-                                        ? 'bg-green-200 hover:bg-red-200' 
+                                        ? (cell.isMainCell === false ? 'bg-green-100 border-green-200 opacity-60' : 'bg-green-200 hover:bg-red-200')
                                         : draggedItem 
                                           ? 'bg-blue-100 hover:bg-blue-200 border-blue-400' 
                                           : 'bg-white hover:bg-green-50'
                                     }`}
-                                    title={cell ? `${cell.name} - Click to remove` : draggedItem ? 'Drop here' : 'Empty slot - Drag items here'}
+                                    style={{
+                                      // Make main cell span multiple grid cells
+                                      ...(cell && cell.isMainCell && cell.size > 1 ? {
+                                        position: 'absolute',
+                                        zIndex: 10,
+                                        width: `${cell.size * 24}px`,
+                                        height: `${cell.size * 24}px`
+                                      } : {})
+                                    }}
+                                    title={cell ? `${cell.name}${cell.size > 1 ? ` (${cell.size}x${cell.size})` : ''} - Click to remove` : draggedItem ? 'Drop here' : 'Empty slot - Drag items here'}
                                   >
                                     {cell && cell.isMainCell !== false && (
                                       <span className={`leading-none flex items-center justify-center h-full ${
