--- a/index.html
+++ b/index.html
@@ -151,8 +151,8 @@
         
         /* Decoration size scaling */
         .decor-size-1 { font-size: 0.75rem; } /* Small 1x1 */
-        .decor-size-2 { font-size: 1.5rem; }  /* Medium 2x2 */
-        .decor-size-3 { font-size: 2.25rem; } /* Large 3x3 */
+        .decor-size-2 { font-size: 1.2rem; }  /* Medium 2x2 */
+        .decor-size-3 { font-size: 1.5rem; } /* Large 3x3 */
         
         /* Custom width/height classes for grid cells */
         .w-18 { width: 4.5rem; } /* 72px for 3x3 grid (3 * 24px) */
@@ -3095,40 +3095,32 @@
                                     }}
                                     onDragOver={handleDragOver}
                                     onDrop={(e) => handleDrop(e, rowIndex, colIndex)}
-                                    className={`relative border border-green-300 rounded cursor-pointer transition-colors ${
-                                      // Size the cell based on decoration size
-                                      cell && cell.isMainCell && cell.size > 1 
-                                        ? `${cell.size === 2 ? 'w-12 h-12' : cell.size === 3 ? 'w-18 h-18' : 'w-6 h-6'}` 
-                                        : 'w-6 h-6'
-                                    } ${
+                                    className={`w-6 h-6 border border-green-300 rounded cursor-pointer transition-colors ${
                                       cell 
                                         ? (cell.isMainCell === false ? 'bg-green-100 border-green-200 opacity-60' : 'bg-green-200 hover:bg-red-200')
                                         : draggedItem 
                                           ? 'bg-blue-100 hover:bg-blue-200 border-blue-400' 
                                           : 'bg-white hover:bg-green-50'
                                     }`}
-                                    style={{
-                                      // Make main cell span multiple grid cells
-                                      ...(cell && cell.isMainCell && cell.size > 1 ? {
-                                        position: 'absolute',
-                                        zIndex: 10,
-                                        width: `${cell.size * 24}px`,
-                                        height: `${cell.size * 24}px`
-                                      } : {})
-                                    }}
                                     title={cell ? `${cell.name}${cell.size > 1 ? ` (${cell.size}x${cell.size})` : ''} - Click to remove` : draggedItem ? 'Drop here' : 'Empty slot - Drag items here'}
                                   >
-                                    {cell && cell.isMainCell !== false && (
+                                    {cell && (
                                       <span className={`leading-none flex items-center justify-center h-full ${
-                                        cell.type === 'decor' && cell.size ? `decor-size-${cell.size}` : 'text-xs'
+                                        cell.isMainCell !== false 
+                                          ? (cell.type === 'decor' && cell.size ? `decor-size-${cell.size}` : 'text-xs')
+                                          : 'text-xs opacity-50'
                                       }`}>
-                                        {cell.type === 'plant' || !cell.type ? '🌺' : 
-                                         cell.type === 'decor' ? cell.emoji :
-                                         cell.id === 'fountain' ? '⛲' : cell.id === 'bench' ? '🪑' : 
-                                         cell.id === 'statue' ? '🗿' : cell.id === 'pond' ? '🐠' : 
-                                         cell.id === 'lantern' ? '🏮' : cell.id === 'windmill' ? '🌪️' : 
-                                         cell.id === 'gazebo' ? '🏛️' : cell.id === 'greenhouse' ? '🏠' : 
-                                         cell.id === 'pavilion' ? '🏯' : '🏺'}
+                                        {cell.isMainCell !== false ? (
+                                          cell.type === 'plant' || !cell.type ? '🌺' : 
+                                          cell.type === 'decor' ? cell.emoji :
+                                          cell.id === 'fountain' ? '⛲' : cell.id === 'bench' ? '🪑' : 
+                                          cell.id === 'statue' ? '🗿' : cell.id === 'pond' ? '🐠' : 
+                                          cell.id === 'lantern' ? '🏮' : cell.id === 'windmill' ? '🌪️' : 
+                                          cell.id === 'gazebo' ? '🏛️' : cell.id === 'greenhouse' ? '🏠' : 
+                                          cell.id === 'pavilion' ? '🏯' : '🏺'
+                                        ) : (
+                                          '◦' /* Small dot to indicate occupied space */
+                                        )}
                                       </span>
                                     )}
                                   </div>
